<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/status_location_card"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/lat_long_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/status_margin"
            android:gravity="center_horizontal"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent">

            <TableRow>

                <TextView
                    android:id="@+id/latitude_label"
                    style="@style/info_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/status_label_right_margin"
                    android:text="@string/gps_latitude_label" />

                <TextView
                    android:id="@+id/latitude"
                    style="@style/info_value" />

                <TextView
                    android:id="@+id/fix_time_label"
                    style="@style/info_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/status_label_right_margin"
                    android:text="@string/gps_fix_time_label" />

                <TextView
                    android:id="@+id/fix_time"
                    style="@style/info_value" />

                <TextView
                    android:id="@+id/fix_time_error"
                    style="@style/info_value_error"
                    android:visibility="gone" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/longitude_label"
                    style="@style/info_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/status_label_right_margin"
                    android:text="@string/gps_longitude_label" />

                <TextView
                    android:id="@+id/longitude"
                    style="@style/info_value" />

                <TextView
                    android:id="@+id/gps_ttff_label"
                    style="@style/info_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/status_label_right_margin"
                    android:text="@string/gps_ttff_label" />

                <TextView
                    android:id="@+id/ttff"
                    style="@style/info_value" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/altitude_label"
                    style="@style/info_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/status_label_right_margin"
                    android:text="@string/gps_altitude_label" />

                <TextView
                    android:id="@+id/altitude"
                    style="@style/info_value" />

                <TextView
                    android:id="@+id/hor_vert_accuracy_label"
                    style="@style/info_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/status_label_right_margin"
                    android:text="@string/gps_accuracy_label" />

                <TextView
                    android:id="@+id/hor_vert_accuracy"
                    style="@style/info_value" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/altitude_msl_label"
                    style="@style/info_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/status_label_right_margin"
                    android:text="@string/gps_altitude_msl_label" />

                <TextView
                    android:id="@+id/altitude_msl"
                    style="@style/info_value" />

                <TextView
                    android:id="@+id/num_sats_label"
                    style="@style/info_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/status_label_right_margin"
                    android:text="@string/gps_num_sats_label" />

                <TextView
                    android:id="@+id/num_sats"
                    style="@style/info_value" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/speed_label"
                    style="@style/info_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/status_label_right_margin"
                    android:text="@string/gps_speed_label" />

                <TextView
                    android:id="@+id/speed"
                    style="@style/info_value" />

                <TextView
                    android:id="@+id/bearing_label"
                    style="@style/info_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/status_label_right_margin"
                    android:text="@string/gps_bearing_label" />

                <TextView
                    android:id="@+id/bearing"
                    style="@style/info_value" />
            </TableRow>

            <TableRow
                android:id="@+id/speed_bearing_acc_row"
                android:visibility="gone">

                <TextView
                    android:id="@+id/speed_acc_label"
                    style="@style/info_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/status_label_right_margin"
                    android:text="gps_speed_acc_label" />

                <TextView
                    android:id="@+id/speed_acc"
                    style="@style/info_value" />

                <TextView
                    android:id="@+id/bearing_acc_label"
                    style="@style/info_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/status_label_right_margin"
                    android:text="gps_bearing_acc_label" />

                <TextView
                    android:id="@+id/bearing_acc"
                    style="@style/info_value" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/pdop_label"
                    style="@style/info_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/status_label_right_margin"
                    android:text="pdop_label"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/pdop"
                    style="@style/info_value"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/hvdop_label"
                    style="@style/info_label"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/status_label_right_margin"
                    android:text="hvdop_label"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/hvdop"
                    style="@style/info_value"
                    android:visibility="gone" />
            </TableRow>
        </TableLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_check_permissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="check permissions"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@id/status_location_card" />

    <Button
        android:id="@+id/btn_start_gps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="find Location"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@id/btn_check_permissions" />

    <androidx.cardview.widget.CardView
        android:id="@+id/gnss_status_card"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:foreground="?attr/selectableItemBackground"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@id/btn_start_gps">

        <HorizontalScrollView
            android:id="@+id/gnss_status_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gnss_status_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                tools:listitem="@layout/status_row_item"/>
        </HorizontalScrollView>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/sbas_status_card"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:foreground="?attr/selectableItemBackground"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@id/gnss_status_card">

        <HorizontalScrollView
            android:id="@+id/sbas_status_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sbas_status_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                tools:listitem="@layout/status_row_item"/>

        </HorizontalScrollView>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>